--- a/templates/base.html
+++ b/templates/base.html
@@ -15,9 +15,9 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/effect_light.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/police.css' %}">
     <meta charset="UTF-8">
-    <link rel="icon" type="image/favicon" href="{% static 'Asset/favicon.ico' %}" />
-    <link rel="icon" type="image/png" sizes="32x32" href="{% 'Asset/favicon-32x32.png' %}">
-<link rel="icon" type="image/png" sizes="16x16" href="{% 'Asset/favicon-16x16.png' %}">
+    <link rel="icon" type="image/favicon" href="{%  'favicon.ico' %}" />
+    <link rel="icon" type="image/png" sizes="32x32" href="{% 'favicon-32x32.png' %}">
+<link rel="icon" type="image/png" sizes="16x16" href="{% 'favicon-16x16.png' %}">
     <title>MERCADONA</title>
 </head>
 <body>
