--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<!DOCTYPE html5>
+<!DOCTYPE html>
 <html lang="fr">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -15,10 +15,10 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/effect_light.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/police.css' %}">
     <meta charset="UTF-8">
+    <title>MERCADONA</title>
     <link rel="icon" type="image/favicon" href="data:,{% static 'Asset/favicon.ico' %}" />
     <link rel="icon" type="image/png" sizes="32x32" href="data:,{% static 'Asset/favicon-32x32.png' %}">
 <link rel="icon" type="image/png" sizes="16x16" href="data:,{% static 'Asset/favicon-16x16.png' %}">
-    <title>MERCADONA</title>
 </head>
 <body>
 <div class="loader">
