--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/police.css' %}">
     <meta charset="UTF-8">
     <title>MERCADONA</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="\store\static\Asset\favicon-32x32.png">
 </head>
 <body>
 <div class="loader">
@@ -87,11 +88,11 @@ Notre équipe est composée d'experts dévoués qui recherchent constamment les 
 Explorez notre site, découvrez nos produits et laissez-vous inspirer. Nous espérons que vous apprécierez votre visite chez MERCADONA et que vous trouverez exactement ce que vous cherchez.
 
 Merci de votre confiance et de votre soutien !
-<br>
+            <br>
             <br>
 L'équipe de MERCADONA"</p>
       </div>
-      <div class="col-md-3">
+       <div class="col-md-3">
         <h4>Liens rapides</h4>
         <ul>
           <li><a href="/">Accueil</a></li>
