--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/police.css' %}">
     <meta charset="UTF-8">
     <title>MERCADONA</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="\store\static\Asset\favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 </head>
 <body>
 <div class="loader">
