--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/police.css' %}">
     <meta charset="UTF-8">
     <title>MERCADONA</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.ico">
+    <link rel="shortcut icon" type="image/ico" href="{% static 'favicon.ico' %}">
 </head>
 <body>
 <div class="loader">
